Change iframe source to Wikipedia article

--- a/index.html
+++ b/index.html
@@ -808,7 +808,7 @@
                     <input type="text" class="url-bar" value="en.wikipedia.org/wiki/MacOS" id="safari-url">
                     <i class="fas fa-share-square" style="color:#555;"></i>
                 </div>
-                <iframe src="https://www.google.com/"class="safari-frame" id="safari-frame" sandbox="allow-scripts allow-same-origin"></iframe>
+                <iframe src="https://en.wikipedia.org/wiki/Operating_system"class="safari-frame" id="safari-frame" sandbox="allow-scripts allow-same-origin"></iframe>
             </div>
         `);
         $('#safari-url').on('keypress', function(e) {
